# purposa

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: setup_okx.sh
src/: config.py  main.py
src/agents/: base.py  critic.py  judge.py  mock.py  pipeline.py  risk.py  summarizer.py
src/api/: models.py  routes.py
src/payments/: x402.py
src/snapshot/: client.py  social.py
src/wallet/: okx.py
static/: index.html
tests/: test_api.py  test_snapshot.py  test_wallet.py
