[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purposa"
version = "0.1.0"
description = "Multi-Agent DAO Governance Analysis & Voting Assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "openai>=1.50.0",
    "anthropic>=0.34.0",
    "gql>=3.5.0",
    "aiohttp>=3.10.0",
    "eth-account>=0.13.0",
    "eth-hash[pycryptodome]>=0.7.0",
    "cryptography>=43.0.0",
    "python-jose>=3.3.0",
    "uuid7>=0.1.0",
    "structlog>=24.4.0",
    "rich>=13.8.0",
    "typer>=0.12.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
purposa = "src.main:cli"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
